--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.react-datepicker__input-container input{
+  width: 100% !important;
+}
+.react-datepicker-wrapper{
+  width: 100% !important;
+}
