--- a/src/Dashboard/Dashboard.css
+++ b/src/Dashboard/Dashboard.css
@@ -2,18 +2,18 @@
 .App {
     text-align: center;
   }
-  
+
   .App-logo {
     height: 40vmin;
     pointer-events: none;
   }
-  
+
   @media (prefers-reduced-motion: no-preference) {
     .App-logo {
       animation: App-logo-spin infinite 20s linear;
     }
   }
-  
+
   .App-header {
     background-color: #282c34;
     min-height: 100vh;
@@ -24,7 +24,7 @@
     font-size: calc(10px + 2vmin);
     color: white;
   }
-  
+
   .App-link {
     color: #61dafb;
   }
@@ -84,4 +84,10 @@
     height: 95%;
     width: 100%;
   }
-  
+
+  .annual-sales-plot {
+    margin: 12px 0px 58px 0px;
+  }
+  .annual-sales-plot p{
+    text-align:center;
+  }
